testsuite/tests/parsing/int_and_float_with_modifier.compilers.reference
[
  structure_item (int_and_float_with_modifier.ml[9,168+0]..[10,199+57])
    Pstr_value Nonrec
    [
      <def>
        pattern (int_and_float_with_modifier.ml[9,168+4]..[9,168+28])
          Ppat_var "int_with_custom_modifier" (int_and_float_with_modifier.ml[9,168+4]..[9,168+28])
        expression (int_and_float_with_modifier.ml[10,199+2]..[10,199+57])
          Pexp_constant PConst_int (1234567890_1234567890_1234567890_1234567890_1234567890,Some z)
    ]
  structure_item (int_and_float_with_modifier.ml[12,258+0]..[13,291+58])
    Pstr_value Nonrec
    [
      <def>
        pattern (int_and_float_with_modifier.ml[12,258+4]..[12,258+30])
          Ppat_var "float_with_custom_modifier" (int_and_float_with_modifier.ml[12,258+4]..[12,258+30])
        expression (int_and_float_with_modifier.ml[13,291+2]..[13,291+58])
          Pexp_constant PConst_float (1234567890_1234567890_1234567890_1234567890_1234567890.,Some z)
    ]
  structure_item (int_and_float_with_modifier.ml[15,351+0]..[15,351+17])
    Pstr_value Nonrec
    [
      <def>
        pattern (int_and_float_with_modifier.ml[15,351+4]..[15,351+9])
          Ppat_var "int32" (int_and_float_with_modifier.ml[15,351+4]..[15,351+9])
        expression (int_and_float_with_modifier.ml[15,351+12]..[15,351+17])
          Pexp_constant PConst_int (1234,Some l)
    ]
  structure_item (int_and_float_with_modifier.ml[17,370+0]..[17,370+17])
    Pstr_value Nonrec
    [
      <def>
        pattern (int_and_float_with_modifier.ml[17,370+4]..[17,370+9])
          Ppat_var "int64" (int_and_float_with_modifier.ml[17,370+4]..[17,370+9])
        expression (int_and_float_with_modifier.ml[17,370+12]..[17,370+17])
          Pexp_constant PConst_int (1234,Some L)
    ]
  structure_item (int_and_float_with_modifier.ml[19,389+0]..[19,389+21])
    Pstr_value Nonrec
    [
      <def>
        pattern (int_and_float_with_modifier.ml[19,389+4]..[19,389+13])
          Ppat_var "nativeint" (int_and_float_with_modifier.ml[19,389+4]..[19,389+13])
        expression (int_and_float_with_modifier.ml[19,389+16]..[19,389+21])
          Pexp_constant PConst_int (1234,Some n)
    ]
  structure_item (int_and_float_with_modifier.ml[21,412+0]..[21,412+32])
    Pstr_value Nonrec
    [
      <def>
        pattern (int_and_float_with_modifier.ml[21,412+4]..[21,412+24])
          Ppat_var "hex_without_modifier" (int_and_float_with_modifier.ml[21,412+4]..[21,412+24])
        expression (int_and_float_with_modifier.ml[21,412+27]..[21,412+32])
          Pexp_constant PConst_int (0x32f,None)
    ]
  structure_item (int_and_float_with_modifier.ml[23,446+0]..[23,446+29])
    Pstr_value Nonrec
    [
      <def>
        pattern (int_and_float_with_modifier.ml[23,446+4]..[23,446+21])
          Ppat_var "hex_with_modifier" (int_and_float_with_modifier.ml[23,446+4]..[23,446+21])
        expression (int_and_float_with_modifier.ml[23,446+24]..[23,446+29])
          Pexp_constant PConst_int (0x32,Some g)
    ]
  structure_item (int_and_float_with_modifier.ml[25,477+0]..[25,477+33])
    Pstr_value Nonrec
    [
      <def>
        pattern (int_and_float_with_modifier.ml[25,477+4]..[25,477+25])
          Ppat_var "float_without_modifer" (int_and_float_with_modifier.ml[25,477+4]..[25,477+25])
        expression (int_and_float_with_modifier.ml[25,477+28]..[25,477+33])
          Pexp_constant PConst_float (1.2e3,None)
    ]
  structure_item (int_and_float_with_modifier.ml[27,512+0]..[27,512+29])
    Pstr_value Nonrec
    [
      <def>
        pattern (int_and_float_with_modifier.ml[27,512+4]..[27,512+22])
          Ppat_var "float_with_modifer" (int_and_float_with_modifier.ml[27,512+4]..[27,512+22])
        expression (int_and_float_with_modifier.ml[27,512+25]..[27,512+29])
          Pexp_constant PConst_float (1.2,Some g)
    ]
]

File "int_and_float_with_modifier.ml", line 10, characters 2-57:
10 |   1234567890_1234567890_1234567890_1234567890_1234567890z
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: Unknown modifier "z" for literal "1234567890_1234567890_1234567890_1234567890_1234567890z"
